--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "characters-counter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The fastest real-time characters, words, sentences, paragraphs counter for your text.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "npm run test"
   },
